out.txt
trans1.c:38:16: error: conflicting types for 'new_mod_main_Point'
mod_main_Point new_mod_main_Point(
               ^
trans1.c:29:1: note: previous definition is here
struct(mod_main_Point, {
^
./cir_macros.h:71:14: note: expanded from macro 'struct'
    typename new_##typename(content_##typename self) {\
             ^
<scratch space>:359:1: note: expanded from here
new_mod_main_Point
^
trans1.c:94:18: error: conflicting types for 'new_mod_main_Counter'
mod_main_Counter new_mod_main_Counter(bltn_uint32 _count){
                 ^
trans1.c:82:1: note: previous definition is here
class(mod_main_Counter, {
^
./cir_macros.h:55:14: note: expanded from macro 'class'
    typename new_##typename(content_##typename content) {\
             ^
<scratch space>:367:1: note: expanded from here
new_mod_main_Counter
^
trans1.c:165:9: error: too many arguments to function call, expected single argument 'self', have 2 arguments
        litrl_bltn_uint32(255)
        ^~~~~~~~~~~~~~~~~~~~~~
trans1.c:29:8: note: 'new_mod_main_Point' declared here
struct(mod_main_Point, {
       ^
trans1.c:170:9: error: passing 'bltn_uint32' (aka 'struct bltn_uint32') to parameter of incompatible type 'content_mod_main_Counter' (aka 'struct content_mod_main_Counter')
        litrl_bltn_uint32(76)
        ^~~~~~~~~~~~~~~~~~~~~
trans1.c:82:1: note: passing argument to parameter 'content' here
class(mod_main_Counter, {
^
./cir_macros.h:55:48: note: expanded from macro 'class'
    typename new_##typename(content_##typename content) {\
                                               ^
trans1.c:189:20: warning: format specifies type 'unsigned int' but the argument has type 'bltn_uint32' (aka 'struct bltn_uint32') [-Wformat]
    printf("%u\n", lcl_cnt);
            ~~     ^~~~~~~
trans1.c:190:20: warning: format specifies type 'unsigned int' but the argument has type 'bltn_uint32' (aka 'struct bltn_uint32') [-Wformat]
    printf("%u\n", lcl_x);
            ~~     ^~~~~
trans1.c:191:20: warning: format specifies type 'unsigned int' but the argument has type 'bltn_uint32' (aka 'struct bltn_uint32') [-Wformat]
    printf("%u\n", lcl_y);
            ~~     ^~~~~
3 warnings and 4 errors generated.
